Create Enrollment Response and Request DTO, Service, Controller and Repo and set all information in the related tables except coursesNames in Teachers